fix overlap giphy

--- a/client/main/main.styl
+++ b/client/main/main.styl
@@ -29,6 +29,5 @@
   margin-top 100px
 
 .giphy
-  max-height 200px
-  max-width: 400px
-  float: right
+  width: 100%
+
